--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@ layout: default
 title: Home
 ---
 
-
-  Hello World!
-
 <br>
 <br>
-  <h2>Blog Posts</h2>
+<h1>Hi.</h1>
+<br>
+<br>
+You have somehow stumbled over my personal website. Welcome!
+<br> <br>
+My name is Christian Leonard Quale. I'm from Stavanger in Norway, but I spend most of my time in Edinburgh studying for an MEng in Electronics and Computer Science at the University of Edinburgh. For more information about me, feel free to click the creatively named "About Me" link on the navigation bar.
+<br>
+<br>
+  <h2>'Recent' Blog Posts:</h2>
   <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in site.posts limit:5 %}
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
