Updated index again, and changed font-size.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ title: Home
 <h1>Hi.</h1>
 <br>
 <br>
-You have somehow stumbled over my personal website. Welcome!
-<br> <br>
-My name is Christian Leonard Quale. I'm from Stavanger in Norway, but I spend most of my time in Edinburgh studying for an MEng in Electronics and Computer Science at the University of Edinburgh. For more information about me, feel free to click the creatively named "About Me" link on the navigation bar.
+You have somehow stumbled over my personal website. Condolences.
 <br>
 <br>
   <h4>'Recent' Blog Posts:</h4>
