--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ title: Home
 <h1>Hi.</h1>
 <br>
 <br>
-You have somehow stumbled over my personal website. Condolences.
+You have somehow stumbled over my personal website. Sorry about that.
 <br>
 <br>
   <h4>'Recent' Blog Posts:</h4>
   <ul class="posts">
     {% for post in site.posts limit:5 %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
     {% endfor %}
   </ul>
 </div>
