--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ You have somehow stumbled over my personal website. Sorry about that.
   <h4>'Recent' Blog Posts:</h4>
   <ul class="posts">
     {% for post in site.posts limit:5 %}
-    <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+    <span>{{ post.date | date: "%e %B, %Y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
     {% endfor %}
   </ul>
-</div>
