--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ You have somehow stumbled over my personal website. Sorry about that.
 <br>
 <br>
   <h4>'Recent' Blog Posts:</h4>
-  <ul class="posts">
+
     {% for post in site.posts limit:5 %}
-    <span>{{ post.date | date: "%e %B, %Y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+    {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
     {% endfor %}
-  </ul>
+
