Updated about page

--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 layout: default
 title: About
 ---
-
-<br>Name: Christian Leonard Quale
-<br>Age: 22
-<br>Birthplace: Stavanger, Norway
-<br>Termtime location: Edinburgh, Scotland
-<br>Location outside of termtime: Sola (outside of Stavanger), Norway
-<br>Occupation: Student at The University of Edinburgh
+<br>
+<br>Name: Christian Leonard Quale<br>
+<br>Age: 22<br>
+<br>Birthplace: Stavanger, Norway<br>
+<br>Termtime location: Edinburgh, Scotland<br>
+<br>Location outside of termtime: Sola (outside of Stavanger), Norway<br>
+<br>Occupation: Student at The University of Edinburgh<br>
 <br>Degree: MEng Electronics and Computer Science
