--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ You have somehow stumbled over my personal website. Sorry about that.
   <h4>'Recent' Blog Posts:</h4>
 
     {% for post in site.posts limit:5 %}
-    {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+    {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
     {% endfor %}
 
