--- a/_posts/2010-07-04-welcome-to-ourhouse.html
+++ b/_posts/2010-07-04-welcome-to-ourhouse.html
@@ -3,7 +3,7 @@ layout: post
 title: Welcome to OurHouse! - Denmark, part 1
 ---
 
-![OurHouse!](/img/den1.jpg)
+<img src="/img/den1.jpg" alt="OurHouse"/>
 
 I've been spending this week in Århus, Denmark with Cantus Aeterna, a project by "Ung Kirkesang", the Norwegian organisation for sustaining and promoting chamber/church-music-activities among youth. The idea behind the choir is to be the representational choir of Ung Kirkesang, consisting of young'ish singers from all over Norway. I've felt very fortunate to have had the opportunity to be a member of the choir since it's conception in 2005. Sadly Århus will be Cantus' last appearance for quite a while, as the project is being put on hold for now. It's been a good five years. A very good five years. Alas, it turns out that a lot of 16 - 25 year olds lead quite busy lives. Committing a year in advance to being in a specific city at a specific time while studying full time is not easy, so the choir is now in an hiatus.
 
