--- a/about.html
+++ b/about.html
@@ -9,4 +9,5 @@ title: About
 <br>Termtime location: Edinburgh, Scotland<br>
 <br>Location outside of termtime: Sola (outside of Stavanger), Norway<br>
 <br>Occupation: Student at The University of Edinburgh<br>
-<br>Degree: MEng Electronics and Computer Science
+<br>Degree: MEng Electronics and Computer Science<br><br>
+Aliases: clq, cquale, christianleonardquale
