Updated elsewhere page

--- a/elsewhere.html
+++ b/elsewhere.html
@@ -8,7 +8,17 @@ title: Elsewhere
 Well, quite a few places.<br><br>
 You can tweet at me on <a href="http://twitter.com/clq">Twitter</a>.<br>
 You can see what music I listen to on <a href="http://www.last.fm/user/clq">last.fm</a>.<br>
+I very occasionally use <a href="http://www.flickr.com/photos/clq/">Flickr</a>.<br>
+I'm on <a href="http://no.linkedin.com/pub/christian-leonard-quale/12/b50/a99">Linkedin</a>.<br>
 You can see what books I have read, and how much I liked them, at <a href="http://www.librarything.com/catalog.php?view=clq&collection=19722&shelf=list&sort=rating">Librarything</a>.<br>
 You can see what films I have seen, and how much I liked them, at <a href="http://www.imdb.com/mymovies/list?l=48875761">IMdB</a>.<br>
+I'm not much of a coder, but I do have a <a href="https://github.com/clq">Github account</a>.<br>
+I'm also on <a href="http://steamcommunity.com/id/clq">Steam</a>.<br>
+You can see the items I share from <a href="http://www.google.com/reader/shared/christianleonardquale">Google Reader</a>.<br>
 
+<br>
+Then there are places I haven't really been active in quite a while... <br> <br>
+When it was first released I naturally signed up for a <a href="http://christianleonardquale.jaiku.com/">Jaiku</a> account.<br>
+The same goes for <a href="http://friendfeed.com/clq/">FriendFeed</a>.<br>
+I used to play <a href="http://services.runescape.com/m=hiscore/compare.ws?user1=clq">Runescape</a>.<br>
 
