Updated the stuff page

--- a/stuff/index.html
+++ b/stuff/index.html
@@ -1,4 +1,8 @@
 ---
-layout: extras
+layout: default
 ---
-Test test
+<h3>Other stuff</h3>
+This is a page where I will gather other things somewhat related to myself.
+<br><br>
+<h4>Quotes:</h4>
+Here is a collection of various quotes I like.
