--- a/stuff/index.html
+++ b/stuff/index.html
@@ -5,4 +5,4 @@ layout: default
 This is a page where I will gather other things somewhat related to myself.
 <br><br>
 <h4>Quotes:</h4>
-Here is a collection of various quotes I like.
+<a href="quotes.html"><span>Here</span></a> is a collection of various quotes I like.
