--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <blockquote>
   <p>The beauty of military life, No questions, only orders and flight. Only flight.
 What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.</p>
