--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -1,6 +1,23 @@
 ---
 layout: default
 ---
+
+<blockquote>
+  <p>My words fly up, my thoughts remain below:
+Words without thoughts never to heaven go.</p>
+  </blockquote>
+<cite>King Claudius in "Hamlet" by William Shakespeare</cite>
+
+<blockquote>
+  <p>A gentle answer turns away wrath, but a harsh word stirs up anger.</p>
+  </blockquote>
+<cite>The Bible</cite>
+
+<blockquote>
+  <p>Please don't just invent a mail address for yourself and use it: it won't work and your mail will not get delivered.</p>
+  </blockquote>
+<cite>Information from the University regarding use of the university e-mail account</cite>
+
 <blockquote>
   <p>The beauty of military life, No questions, only orders and flight. Only flight.
 What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.</p>
