--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <blockquote>
-  <p>My words fly up, my thoughts remain below:
-Words without thoughts never to heaven go.</p>
+ My words fly up, my thoughts remain below:
+Words without thoughts never to heaven go.
   </blockquote>
 <cite>King Claudius in "Hamlet" by William Shakespeare</cite>
 
 <blockquote>
-  <p>A gentle answer turns away wrath, but a harsh word stirs up anger.</p>
-  <cite>The Bible</cite>
+  A gentle answer turns away wrath, but a harsh word stirs up anger.
   </blockquote>
+    <cite>The Bible</cite>
 
 
 <blockquote>
