Updated quotes and css.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -15,12 +15,12 @@ Words without thoughts never to heaven go.
 
 
 <blockquote>
-  <p>Please don't just invent a mail address for yourself and use it: it won't work and your mail will not get delivered.</p>
+  Please don't just invent a mail address for yourself and use it: it won't work and your mail will not get delivered.
   </blockquote>
 <cite>Information from the University regarding use of the university e-mail account</cite>
 
 <blockquote>
-  <p>The beauty of military life, No questions, only orders and flight. Only flight.
-What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.</p>
+ The beauty of military life, No questions, only orders and flight. Only flight.
+What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.
 </blockquote>
 <cite>"Late Home Tonight" from "Amused to Death" by Roger Waters</cite>
