Large update of quotes.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -1,6 +1,65 @@
 ---
 layout: default
 ---
+<h3>Quotes!</h3>
+What follows is a collection of quotes, in no particular order, that I have come over and found funny, interesting or both.
+<br>
+<br>
+
+<blockquote>I don't know if you know it, J.B., but you're the sort of fellow who causes hundreds to fall under suspicion when he's found stabbed in his library with a paper-knife of Oriental design.</blockquote>
+<cite>Joss Weatherby to J.B. Duff in "Quick Service" by P. G. Wodehouse</cite>
+
+<blockquote>Journalism largely consists of saying 'Lord Jones is Dead' to people who never knew that Lord Jones was alive.</blockquote>
+<cite>G. K. Chesterton</cite>
+
+<blockquote>The whole modern world has divided itself into Conservatives and Progressives. The business of Progressives is to go on making mistakes. The business of the Conservatives is to prevent the mistakes from being corrected.</blockquote>
+<cite>G. K. Chesterton</cite>
+
+<blockquote>Music, in the precision of its form and the mathematical tyranny of its laws, escapes into an eternity of abstraction and an absurd sublime that is everywhere and nowhere at once.</blockquote>
+<cite>Stephen Fry</cite>
+
+<blockquote>House: "[I'm] Dr. House, I don't think we've met"<br>
+Hospital inspector: "Dr. Jamie Convay, I've heard your name"<br>
+House: "Most people have... It's also a noun"</blockquote>
+<cite>From House</cite>
+
+<blockquote>If ignorance is bliss, why aren't there more happy people in the world?</blockquote>
+<cite>Stephen Fry</cite>
+
+<blockquote>The politicians are preachers, and the preachers are politicians.</blockquote>
+<cite>Lou Ford on civilisation in "The Killer Inside Me" by Jim Thompson</cite>
+
+<blockquote>"You all look silly," Charley said, "Without your thumbs."
+"It's only a beginning," inBOIL said, "All right, men. Let's cut off our noses."
+"Hail, iDEATH," they all shouted and cut off their noses. The one who was drunk also put out his eye. They took their noses and dropped them all over the place.
+One of them put his nose in Fred's hand. Fred took the nose and threw it in the guy's face.</blockquote>
+<cite>From "In Watermelon Sugar" by Richard Brautigan</cite>
+
+
+<blockquote>I take it you know that Orange number at the Palace? It goes:<br>
+<br>
+Oh, won’t you something something oranges,<br>
+My something oranges,<br>
+My something oranges;<br>
+Oh, won’t you something something something I forget,<br>
+Something something something tumty tumty yet:<br>
+Oh — <br>
+<br>
+or words to that effect. It’s a dashed clever lyric, and the tune’s good, too.</blockquote>
+<cite>Bertie Wooster in "The Inimitable Jeeves" by P. G. Wodehouse</cite>
+
+<blockquote>No man in Reggie Tennyson's condition, already shaken from saying "initialling memoranda in triplicate" can utter the words "definitely inexplicable" without Nature taking its toll. A sharp twinge of pain contorted his face, and he lay for a moment with his hands pressed to his temples, trying to pull himself together.</blockquote>
+<cite>From "The Luck of The Bodkins" by P. G. Wodehouse</cite>
+
+<blockquote>The very nature of a Mickey Mouse makes it easy for a seeker after it to detect whether it is or is not present in any given spot. It is not like a Maharajah's ruby or a secret treaty, which might get shoved away under a camisole and escape the eye. A Mickey Mouse has bulk. If you open a drawer and do not find it immediately, it is not in that drawer.</blockquote>
+<cite>Hints for locating a plush Mickey Mouse. From "The Luck of The Bodkins" by P. G. Wodehouse</cite>
+
+<blockquote>Out, out! Get out! Out before I slash your throat with a knife and hang you dripping with blood from the flag-pole. Out, before I pull your guts from your body and stuff them down your mouth. Out, before I become mildly irritated. Go, hence, begone. Stand not upon the order of your going, but go at once. Run! run quickly from here, run to the other side of Europe, flee for your life nor give not one backward glance. I never hope to see you again in this world or the next. Never speak to me, never approach me, never advertise your presence to me by the smallest sound, or by the living God that made me I will do such things . . . I know not what they are but they will be terrors of the earth. Flee hence, be not here, but somewhere in a vast Elsewhere to which I have no access. Boys who rub me up the wrong way, Newton, come to a sticky end. Be removed, piss off, beraus, get utterly outly out.</blockquote>
+<cite>Adrian Healey in "The Liar" by Stephen Fry</cite>
+
+<blockquote>An original idea. That can't be too hard. The library must be full of them.</blockquote>
+<cite>Adrian Healey in "The Liar" by Stephen Fry</cite>
+
 
 <blockquote>
  My words fly up, my thoughts remain below:
@@ -17,7 +76,7 @@ Words without thoughts never to heaven go.
 <blockquote>
   Please don't just invent a mail address for yourself and use it: it won't work and your mail will not get delivered.
   </blockquote>
-<cite>Information from the University regarding use of the university e-mail account</cite>
+<cite>Information from the University of Edinburgh regarding use of the university e-mail account</cite>
 
 <blockquote>
  The beauty of military life, No questions, only orders and flight. Only flight.
