Minor quotes change.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -38,14 +38,14 @@ One of them put his nose in Fred's hand. Fred took the nose and threw it in the 
 
 <blockquote>I take it you know that Orange number at the Palace? It goes:<br>
 <br>
-Oh, won’t you something something oranges,<br>
+Oh, won't you something something oranges,<br>
 My something oranges,<br>
 My something oranges;<br>
-Oh, won’t you something something something I forget,<br>
+Oh, won't you something something something I forget,<br>
 Something something something tumty tumty yet:<br>
-Oh — <br>
+Oh - <br>
 <br>
-or words to that effect. It’s a dashed clever lyric, and the tune’s good, too.</blockquote>
+or words to that effect. It's a dashed clever lyric, and the tune's good, too.</blockquote>
 <cite>Bertie Wooster in "The Inimitable Jeeves" by P. G. Wodehouse</cite>
 
 <blockquote>No man in Reggie Tennyson's condition, already shaken from saying "initialling memoranda in triplicate" can utter the words "definitely inexplicable" without Nature taking its toll. A sharp twinge of pain contorted his face, and he lay for a moment with his hands pressed to his temples, trying to pull himself together.</blockquote>
@@ -83,3 +83,5 @@ Words without thoughts never to heaven go.
 What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.
 </blockquote>
 <cite>"Late Home Tonight" from "Amused to Death" by Roger Waters</cite>
+<br>
+<br>
