Minor quotes change.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -29,9 +29,9 @@ House: "Most people have... It's also a noun"</blockquote>
 <blockquote>The politicians are preachers, and the preachers are politicians.</blockquote>
 <cite>Lou Ford on civilisation in "The Killer Inside Me" by Jim Thompson</cite>
 
-<blockquote>"You all look silly," Charley said, "Without your thumbs."
-"It's only a beginning," inBOIL said, "All right, men. Let's cut off our noses."
-"Hail, iDEATH," they all shouted and cut off their noses. The one who was drunk also put out his eye. They took their noses and dropped them all over the place.
+<blockquote>"You all look silly," Charley said, "Without your thumbs."<br>
+"It's only a beginning," inBOIL said, "All right, men. Let's cut off our noses."<br>
+"Hail, iDEATH," they all shouted and cut off their noses. The one who was drunk also put out his eye. They took their noses and dropped them all over the place.<br>
 One of them put his nose in Fred's hand. Fred took the nose and threw it in the guy's face.</blockquote>
 <cite>From "In Watermelon Sugar" by Richard Brautigan</cite>
 
