Fixed some titles.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Quotes
 ---
 <h3>Quotes!</h3>
 What follows is a collection of quotes, in no particular order, that I have come over and found funny, interesting or both.
