--- a/stuff/index.html
+++ b/stuff/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Stuff
 ---
 <h3>Other stuff</h3>
 This is a page where I will gather other things somewhat related to myself.
