--- a/stuff/index.html
+++ b/stuff/index.html
@@ -6,4 +6,4 @@ title: Stuff
 This is a page where I will gather other things somewhat related to myself.
 <br><br>
 <h4>Quotes:</h4>
-<a href="quotes.html"><span>Here</span></a> is a collection of various quotes I like.
+<a href="quotes.html">Here is a collection of various quotes I like.</a>
