Fixed special character

--- a/IB/index.html
+++ b/IB/index.html
@@ -68,7 +68,7 @@ title: Quotes
 
 <embed type="application/x-shockwave-flash" src="audiouq4.swf?audioUrl=http://s3.amazonaws.com/publicupload/IBIB.mp3" height="27" width="320"></object><br>
 
-<a href="http://s3.amazonaws.com/publicupload/IBIB.mp3">IB IB</a> (Lyrics: IB IB) - Parody of The Hallelujah Chorus by Händel.<br>
+<a href="http://s3.amazonaws.com/publicupload/IBIB.mp3">IB IB</a> (Lyrics: IB IB) - Parody of The Hallelujah Chorus by H&auml;ndel.<br>
 <br>
 <br>
 
