--- a/stuff/index.html
+++ b/stuff/index.html
@@ -5,5 +5,8 @@ title: Stuff
 <h3>Other stuff</h3>
 This is a page where I will gather other things somewhat related to myself.
 <br><br>
-<h4>Quotes:</h4>
+<h4>IB Songs</h4>
+So, at some point I attended the IB, and we had to do mandatory creativity. So I made a bunch of <a href="/IB/index.html">IB songs</a>.
+<br>
+<h4>Quotes</h4>
 <a href="quotes.html">Here is a collection of various quotes I like.</a>
