Updated IB stuff.

--- a/IB/index.html
+++ b/IB/index.html
@@ -2,11 +2,10 @@
 layout: default
 title: Quotes
 ---
-<h1>IB Songs!</h1>
+<h2>IB Songs</h2>
 <p>Hi, and welcome. This is the page for my IB song-parodies. In the timespan from May to December 2007 I wrote a few parodies of other songs with lyrics relating to the International Baccalaureate. I didn't take the time to record most of them, but since I have - and I am using this page as a place to gather them all together.</p>
-<p>This is all very tounge in cheek and just done for fun. With this I hope that someone else might also join in the fun, and that someone else, maybe, can have some fun with the lyrics and the recordings.</p>
-<p>All the lyrics and recordings of the songs are licensed under a, take a deep breath, <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 Unported License</a>. You probably don't care about this, so ignore it. If you do care, and wish to use anything from this page in any way shape or form, read the fine print at the bottom of this page. </p>
-<p>To download a song right-click on the link and choose &quot;Save target as&quot;, or words to that effect. The lyrics will open as a text file, either in notepad or in a new window. To play the songs press the &quot;play&quot;-button (requires flash). </p>
+<p>This is all very tounge in cheek and just done for fun. Please don't take them at all seriously... I don't.</p>
+
 <p><h2>The songs:</h2>
 </p><br>
 <embed type="application/x-shockwave-flash" src="audiouq4.swf?audioUrl=http://s3.amazonaws.com/publicupload/IBnow.mp3" height="27" width="320"></object><br>
