Updated IB stuff.

--- a/IB/index.html
+++ b/IB/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Quotes
+title: IB songs
 ---
 <h2>IB Songs</h2>
 <p>Hi, and welcome. This is the page for my IB song-parodies. In the timespan from May to December 2007 I wrote a few parodies of other songs with lyrics relating to the International Baccalaureate. I didn't take the time to record most of them, but since I have - and I am using this page as a place to gather them all together.</p>
