Added geocaching profile.

--- a/elsewhere.html
+++ b/elsewhere.html
@@ -15,6 +15,8 @@ You can see what films I have seen, and how much I liked them, at <a href="http:
 I'm not much of a coder, but I do have a <a href="https://github.com/clq">Github account</a>.<br>
 I'm also on <a href="http://steamcommunity.com/id/clq">Steam</a>.<br>
 You can see the items I share from <a href="http://www.google.com/reader/shared/christianleonardquale">Google Reader</a>.<br>
+I'm also an occasional geocacher:<br>
+<a href="http://www.geocaching.com/profile/?guid=6cab0704-7e4f-4734-91b5-fe24ea46c605" target="_blank"><img src="http://img.geocaching.com/stats/img.aspx?txt=&uid=6cab0704-7e4f-4734-91b5-fe24ea46c605&bg=1" alt="Profile for cquale" /></a> <br>
 
 <br>
 Then there are places I haven't really been active in quite a while... <br> <br>
