--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ You have somehow stumbled over my personal website. Sorry about that.
   <h4>Five Least Ancient Blog Posts:</h4>
 
     {% for post in site.posts limit:5 %}
-    {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
+        {% unless post.draft %}
+        {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
     {% endfor %}
+    <br>
+      <a href="http://fusion.google.com/add?source=atgs&feedurl=http%3A//www.christianleonardquale.com/feed.xml"><img src="http://gmodules.com/ig/images/plus_google.gif" border="0" alt="Add to Google"></a> - 
+<a href="http://www.christianleonardquale.com/feed.xml">RSS feed</a>
 
