Updated about-page slightly.

--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@ title: About
 <br>Birthplace: Stavanger, Norway<br>
 <br>Termtime location: Edinburgh, Scotland<br>
 <br>Location outside of termtime: Sola (outside of Stavanger), Norway<br>
-<br>Occupation: Student at The University of Edinburgh<br>
+<br>Occupation: Fourth year student at The University of Edinburgh<br>
 <br>Degree: MEng Electronics and Computer Science<br><br>
 Aliases: clq, cquale, christianleonardquale
