--- a/eums/index.html
+++ b/eums/index.html
@@ -5,7 +5,18 @@ title: EUMS mp3 files
 <h2>EUMS Chorus - Sunday Worship mp3 files</h2>
 <br>
 <br>
-The service is available on iPlayer, and will be available there until the 4th of December: <a href="http://www.bbc.co.uk/iplayer/episode/b017lbd5/Sunday_Worship_27_11_2011/">iPlayer link</a>
+<br><br>
+Here are mp3-files of the service, ripped from the iPlayer stream. To download, right click and select "Save Target As." If you know how to use Bit Torrent, please download the file using the torrent-link. It will save some bandwidth.
+<br><br>
+Full Service - 192 kbps mp3, 39:16, 53.9 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3?torrent">Bit-torrent download</a> <br><br>
+
+Full Service - 320 kbps (high-quality) mp3, 39:16, 89.8 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3?torrent">Bit-torrent download</a> <br><br>
+
+Choir-parts only - 320 kbps mp3, 15:53, 36.3 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3?torrent">Bit-torrent download</a> <br><br>
+If you, for some reason, want the uncompressed iPlayer-rip (about 800 megabytes), contact me.
+<br><br><br>
+
+The service is available on iPlayer, and will be until the 4th of December: <a href="http://www.bbc.co.uk/iplayer/episode/b017lbd5/Sunday_Worship_27_11_2011/">iPlayer link</a>
 <br> <br>
 iPlayer description:<br>
 Advent 1: Longing for wisdom
@@ -17,11 +28,4 @@ As Christmas approached, worship in the early centuries of the Christian church 
 O Wisdom, coming forth from the mouth of the Most High, reaching from one end to the other mightily, and sweetly ordering all things: Come and teach us the way of prudence. Leader: The minister, the Revd Scott McKenna Preacher: The Revd Dr Alison Jack of New College, Edinburgh. With Edinburgh University Music Society Chorus directed by Neil Metcalfe. Organist: John Willmett
 <br><br>
 Producer: Mo McCullough.
-<br><br><br>
-Here are some mp3-files of the service, ripped from the iPlayer stream. To download, right click and select "Save Target As." If you know how to use Bit Torrent, please download the file using the torrent-link. It will save some bandwidth.
-<br><br>
-Full Service - 192 kbps mp3, 39:16, 53.9 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3/">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3?torrent">Bit-torrent download</a> <br><br>
-
-Full Service - 320 kbps (high-quality) mp3, 39:16, 89.8 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3/">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3?torrent">Bit-torrent download</a> <br><br>
-
-Choir-parts only - 320 kbps mp3, 15:53, 36.3 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3/">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3?torrent">Bit-torrent download</a> <br><br>
+<br>
