--- a/eums/index.html
+++ b/eums/index.html
@@ -6,7 +6,7 @@ title: EUMS mp3 files
 <br>
 
 Here are mp3-files of the service, ripped from the iPlayer stream. To download, right click and select "Save Target As." <br> 
-If you know how to use BitTorrent, please download the file using the torrent-link, as it will save me some bandwidth.
+If you know how to, and are comfortable using, BitTorrent, it would be nice if you could download the file using the torrent-link, as it will save me some bandwidth.
 <br><br>
 Full Service - 192 kbps mp3, 39:16, 53.9 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3?torrent">BitTorrent download</a> <br><br>
 
