--- a/eums/index.html
+++ b/eums/index.html
@@ -5,14 +5,13 @@ title: EUMS mp3 files
 <h2>EUMS Chorus - Sunday Worship mp3 files</h2>
 <br>
 
-Here are mp3-files of the service, ripped from the iPlayer stream. To download, right click and select "Save Link As." <br> 
-If you know how to, and are comfortable using, BitTorrent, it would be nice if you could download the file using the torrent-link, as it will save me some bandwidth.
+Here are mp3-files of the service, ripped from the iPlayer stream. To download, right click and select "Save Link As."
 <br><br>
-Full Service - 192 kbps mp3, 39:16, 53.9 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3?torrent">BitTorrent download</a> <br><br>
+Full Service - 192 kbps mp3, 39:16, 53.9 MB - <a href="http://clq.blip2.net/Radio4-full192.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full192.mp3">Backup link (if the other one doesn't work)</a> <br><br>
 
-Full Service - 320 kbps (high-quality) mp3, 39:16, 89.8 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3?torrent">BitTorrent download</a> <br><br>
+Full Service - 320 kbps (high-quality) mp3, 39:16, 89.8 MB - <a href="http://clq.blip2.net/Radio4-full320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-full320.mp3">Backup link (if the other one doesn't work)</a> <br><br>
 
-Choir-parts only - 320 kbps mp3, 15:53, 36.3 MB - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3?torrent">BitTorrent download</a> <br><br>
+Choir-parts only - 320 kbps mp3, 15:53, 36.3 MB - <a href="http://clq.blip2.net/Radio4-choironly320.mp3">mp3 Link</a> - <a href="https://s3.amazonaws.com/clqpublic/Radio4-choironly320.mp3">Backup link (if the other one doesn't work)</a> <br><br>
 If you, for some reason, want the uncompressed iPlayer-rip (about 800 megabytes), contact me.
 <br><hr><br>
 
