--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -7,7 +7,7 @@ title: Stuff
 Here is my book a week project. Week 1 starts on the week starting the 14th of May.
 <br>
 
-<table border="1" width="400" cellpadding="1" cellspacing="1">
+<table border="1" cellpadding="1" cellspacing="1">
 	<tr>
 		<td>Week</td>
 		<td>Book</td>
