--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -18,30 +18,30 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 		<td>1</td>
 		<td>"Steve Jobs" by Walter Isaacson</td>
 		<td>Review goes here</td>
-		<td style="background-color:green;">20-05-12 X</td>
+		<td style="background-color:lightgreen;">20-05-12</td>
 	</tr>
 	<tr>
 		<td>2</td>
 		<td>"The Big Four" by Agatha Christie</td>
 		<td>Review goes here</td>
-		<td>27-05-12 X</td>
+		<td>27-05-12</td>
 	</tr>
 	<tr>
 		<td>3</td>
 		<td>"The Elegance of the Hedgehog" by Muriel Barbery</td>
 		<td>Review goes here</td>
-		<td>03-06-12 X</td>
+		<td>03-06-12</td>
 	</tr>
 	<tr>
 		<td>4</td>
 		<td>"The Picture of Dorian Gray" by Oscar Wilde</td>
 		<td>Review goes here</td>
-		<td>10-06-12, Nope</td>
+		<td>10-06-12</td>
 	</tr>
 	<tr>
 		<td>5</td>
 		<td>"I, Partridge: We Need To Talk About Alan" by Alan Partridge</td>
 		<td>Review goes here</td>
-		<td>17-06-12, Nope</td>
+		<td>17-06-12</td>
 	</tr>
 </table>
