--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -18,7 +18,7 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 		<td>1</td>
 		<td>"Steve Jobs" by Walter Isaacson</td>
 		<td>Review goes here</td>
-		<td style="background-color:lightgreen;">20-05-12</td>
+		<td style="background-color:#00FF00;">20-05-12</td>
 	</tr>
 	<tr>
 		<td>2</td>
