--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -7,7 +7,11 @@ title: Stuff
 Here is my book a week project. Week 1 starts on the week starting the 14th of May.
 <br>
 
-<table border="1" cellpadding="1" cellspacing="1">
+<table border="1" cellpadding="1" cellspacing="1" width=400 style='table-layout:fixed'>
+ <col width=20>
+ <col width=100>
+ <col width=200>
+ <col width=80>
 	<tr>
 		<td>Week</td>
 		<td>Book</td>
@@ -17,31 +21,31 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 	<tr>
 		<td>1</td>
 		<td>"Steve Jobs" by Walter Isaacson</td>
-		<td>Review goes here</td>
+		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td style="background-color:#00FF00;">20-05-12</td>
 	</tr>
 	<tr>
 		<td>2</td>
 		<td>"The Big Four" by Agatha Christie</td>
-		<td>Review goes here</td>
+		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td>27-05-12</td>
 	</tr>
 	<tr>
 		<td>3</td>
 		<td>"The Elegance of the Hedgehog" by Muriel Barbery</td>
-		<td>Review goes here</td>
+		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td>03-06-12</td>
 	</tr>
 	<tr>
 		<td>4</td>
 		<td>"The Picture of Dorian Gray" by Oscar Wilde</td>
-		<td>Review goes here</td>
+		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td>10-06-12</td>
 	</tr>
 	<tr>
 		<td>5</td>
 		<td>"I, Partridge: We Need To Talk About Alan" by Alan Partridge</td>
-		<td>Review goes here</td>
+		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td>17-06-12</td>
 	</tr>
 </table>
