--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -19,33 +19,33 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
         <td>Passed</td>
 	</tr>
 	<tr>
-		<td>1</td>
-		<td>"Steve Jobs" by Walter Isaacson</td>
-		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
-		<td style="background-color:#00FF00;">20-05-12</td>
+		<td valign="top">1</td>
+		<td valign="top">"Steve Jobs" by Walter Isaacson</td>
+		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top" style="background-color:#00FF00;">20-05-12</td>
 	</tr>
 	<tr>
-		<td>2</td>
-		<td>"The Big Four" by Agatha Christie</td>
-		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
-		<td>27-05-12</td>
+		<td valign="top">2</td>
+		<td valign="top">"The Big Four" by Agatha Christie</td>
+		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top" style="background-color:#00FF00;">27-05-12</td>
 	</tr>
 	<tr>
-		<td>3</td>
-		<td>"The Elegance of the Hedgehog" by Muriel Barbery</td>
-		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
-		<td>03-06-12</td>
+		<td valign="top">3</td>
+		<td valign="top">"The Elegance of the Hedgehog" by Muriel Barbery</td>
+		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top" style="background-color:#00FF00;">03-06-12</td>
 	</tr>
 	<tr>
-		<td>4</td>
-		<td>"The Picture of Dorian Gray" by Oscar Wilde</td>
-		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
-		<td>10-06-12</td>
+		<td valign="top">4</td>
+		<td valign="top">"The Picture of Dorian Gray" by Oscar Wilde</td>
+		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top" style="background-color:#00FF00;">10-06-12</td>
 	</tr>
 	<tr>
-		<td>5</td>
-		<td>"I, Partridge: We Need To Talk About Alan" by Alan Partridge</td>
-		<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
-		<td>17-06-12</td>
+		<td> valign="top"5</td>
+		<td valign="top">"I, Partridge: We Need To Talk About Alan" by Alan Partridge</td>
+		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top" style="background-color:#00FF00;">17-06-12</td>
 	</tr>
 </table>
