--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -8,12 +8,12 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 <br>
 
 <table border="1" cellpadding="1" cellspacing="1" width=700 style='table-layout:fixed'>
- <col width=80>
- <col width=120>
+ <col width=30>
+ <col width=170>
  <col width=400>
  <col width=100>
 	<tr>
-		<td>Week</td>
+		<td>W</td>
 		<td>Book</td>
 		<td>Mini-review</td>
         <td>Passed</td>
@@ -43,7 +43,7 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 		<td valign="top" style="background-color:#00FF00;">10-06-12</td>
 	</tr>
 	<tr>
-		<td> valign="top"5</td>
+		<td valign="top">5</td>
 		<td valign="top">"I, Partridge: We Need To Talk About Alan" by Alan Partridge</td>
 		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
 		<td valign="top" style="background-color:#00FF00;">17-06-12</td>
